# light-folder

./: .gitignore  Cargo.toml  Dockerfile  install_dependencies.sh
.github/workflows/: rust.yml
src/: config.rs  error.rs  img.rs  main.rs  proxy_controller.rs  requester.rs
src/img/: logic.rs  mod.rs  work.rs
